--- a/aboutpage.css
+++ b/aboutpage.css
@@ -1,10 +1,16 @@
 /* General Styles */
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   background-color: #f4f4f4;
   color:orange;
+  box-sizing: border-box;
 }
 
 header {
