--- a/index.css
+++ b/index.css
@@ -7,14 +7,12 @@ body {
 }
 
 header {
-  display: flex;
   padding: 20px;
   text-align: center;
   background-color: blue;
   color: white;
   padding: 10px 0;
-  position: relative; /* Ensure header stays above video */
-  z-index: 10 ; /* Higher than video z-index */
+ /* Higher than video z-index */
 }
 
 nav ul {
@@ -251,13 +249,9 @@ footer {
   .slider-container {
     height: 300px;
   }
-  
-  nav ul {
-    flex-direction: column;
-    align-items: center;
-  }
-  
+ 
   nav ul li {
     margin: 5px 0;
+    padding: 10px;
   }
 }
